--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DB=mongodb+srv://skowyrab:Tessssstttttt3214@cluster0.cu8e0he.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB= <YOUR_DB_LINK>
 JWTPRIVATEKEY=abcdefg
 SALT=10
